traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:8: error: Missing closing brace `}' assumed here
}
^TraversalZigZag:10: error: expected class or object definition
def fini() : Boolean = {
^TraversalZigZag:18: error: expected class or object definition
def bouge(){
^